minor sonar recommendations